--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 <h1>Sergey Yagovkin</h1>
+<img crs="img/photo.png">
 <h2>Contact Info</h2>
 <ul>
 <li>Email: yagovkin.si@mail.ru</li>
@@ -23,7 +24,7 @@ I would like to develop as .NET developer. Now I am most interested in the devel
 <h4>Advanced:</h4>
 <ul>
 <li>.NET (C#)</li>
-<ul>
+</ul>
 <h4>Intermediate:</h4>
 <ul>
 <li>ASP.NET</li>
